assets/css/style.css
@font-face {
  font-family: 'Herculanum';
  src: url('../fonts/Herculanum.svg#Herculanum') format('svg'),
      url('../fonts/Herculanum.ttf') format('truetype'),
      url('../fonts/Herculanum.woff') format('woff');
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: 'herculanum';
  src: url('../fonts/herculanum.eot');
  src: url('../fonts/herculanum.eot?#iefix') format('embedded-opentype');
  font-weight: normal;
  font-style: normal;
}

body {
  margin: 0;
  display: flex;
}

.hide {
  display: none;
}
.cheatMode {
  position: absolute;
  width: 99px;
  height: 24px;
  display: none;
}
/* classes for main layout */
.content {
  margin: 30px auto;
  height: 90vh;
  width: 90vw;
  max-width: 1250px;
  border: 7px solid rgb(124, 124, 241);
  border-radius: 20px;
}
.main {
  display: flex;
  height: 80%;
}
.main img {
  height: 72%;
  width: 90%;
  max-width: 1250px;
  position: absolute;
  filter: blur(2px);
  z-index: -2;
}

/* classes for header */
.header {
  height: 20%;
  width: 100%;
  background-color: lightsalmon;
  display: flex;
  border-radius: 10px 10px 0 0;
}
.logo {
  margin: auto;
  height: 100%;
  width: 38%;
}
.elements {
  margin: auto;
  height: 70%;
  width: 15%;
}

/* classes for modals */
.startModal,
.winModal {
  height: 90%;
  width: 90%;
  max-width: 1250px;
  display: flex;
  flex-direction: column;
  position: absolute;
  background-color: salmon;
  border-radius: 10px;
  z-index: 4;
  display: none;
}
.startModalImage,
.winModalImage {
  display: flex;
}
.startModal img,
.winModal img {
  height: 70%;
  margin: auto;
}
.startModalText {
  height: 45%;
  font-family: 'Herculanum';
  font-size: 24px;
  padding: 0 10% 0 10%;
  overflow-y: scroll;
  overflow-x: hidden;
  text-align: center;
}
.startModalText::-webkit-scrollbar {
  display: none;
}
.winModalText {
  display: flex;
}
.winModalText span {
  height: 10%;
  margin: auto;
  padding: 0 10% 0 10%;
  font-family: 'Herculanum';
  font-size: 50px;
  text-align: center;
}
.startModalButton,
.winModalButton {
  height: 10%;
  width: 50%;
  margin: auto;
  border-radius: 10px;
  background-color: lightsalmon;
  color: rgb(10, 10, 143);
  font-family: 'Herculanum';
  font-size: 3.2vw;
  text-shadow: 1px 2px white;
}
.startModalButton:active {
  box-shadow: 2px 2px blue;
}

/* classes for stats */
.statsBox {
  height: 100%;
  width: 20%;
  display: flex;
  flex-direction: column;
  font-family: 'herculanum';
}
.stats {
  height: calc(100% / 3);
  width: 100%;
  display: flex;
  flex-direction: column;
}
.statsTitle,
.statsData {
  height: 40%;
  width: 80%;
  display: flex;
  border-radius: 10px;
  background-color: salmon;
  opacity: 70%;
  margin: auto;
}
.stats span {
  margin: auto;
  text-align: center;
  font-size: 2.5vw;
  font-weight: bolder;
}

/* classes for gameboard */
.gameboard {
  height: 100%;
  width: 80%;
  display: flex;
  flex-direction: column;
  padding: 5px;
}
.row {
  height: 100%;
  display: flex;
  padding: 2%;
  transform-style: preserve-3d;
}

/* classes for cards */
.cards {
  height: 100%;
  width: 40%;
  position: relative;
  margin: 0 1% 2% 1%;
  transition: 1s linear all;
}
.cards:hover {
  cursor: pointer;
}
.cardBack,
.cardFront {
  height: 100%;
  width: 100%;
  position: absolute;
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  border-radius: 20px;
  backface-visibility: hidden;
}
.cardBack {
  background-image: url('../images/map card back.jpg');
}
.cardFront {
  transform: rotateY(180deg);
}
.front {
  animation: returnFront 0.5s forwards;
  transition: 1s linear all;
}
@keyframes returnFront {
  from {
    transform: rotateY(0deg);
  }
  to {
    transform: rotateY(180deg);
  }
}
.back {
  animation: returnBack 0.5s forwards;
  transition: 1s linear all;
}
@keyframes returnBack {
  from {
    transform: rotateY(180deg);
  }
  to {
    transform: rotateY(0deg);
  }
}
/* classes for card flip animation */
.backFlip {
  animation: backFlip 0.5s forwards;
  transition: 1s linear all;
}
@keyframes backFlip {
  from {
    transform: rotateY(0deg);
  }
  to {
    transform: rotateY(180deg);
  }
}
.frontFlip {
  animation: forwards 0.5s frontFlip;
  transition: 1s linear all;
}
@keyframes frontFlip {
  from {
    transform: rotateY(180deg);
  }
  to {
    transform: rotateY(0deg);
  }
}

/* classes for card images */
.aang {
  background-image: url('../images/cardImages/aang.png');
}
.aangGlow {
  background-image: url('../images/cardImages/aangGlow.png');
}
.air {
  background-image: url('../images/cardImages/airCard.png');
}
.appa {
  background-image: url('../images/cardImages/appa.png');
}
.azula {
  background-image: url('../images/cardImages/azula.png');
}
.azulaBlue {
  background-image: url('../images/cardImages/azulaBlue.png');
}
.earth {
  background-image: url('../images/cardImages/earthCard.png');
}
.fire {
  background-image: url('../images/cardImages/fireCard.png');
}
.iroh {
  background-image: url('../images/cardImages/iroh.png');
}
.irohSmiling {
  background-image: url('../images/cardImages/irohSmiling.png');
}
.katara {
  background-image: url('../images/cardImages/katara.png');
}
.kataraCoat {
  background-image: url('../images/cardImages/kataraCoat.png');
}
.momo {
  background-image: url('../images/cardImages/momo.png');
}
.sokka {
  background-image: url('../images/cardImages/sokka.png');
}
.sokkaSmiling {
  background-image: url('../images/cardImages/sokkaSmile.png');
}
.suki {
  background-image: url('../images/cardImages/suki.png');
}
.toph {
  background-image: url('../images/cardImages/toph.png');
}
.tophBeifong {
  background-image: url('../images/cardImages/tophBeifong.png');
}
.tuiAndLa {
  background-image: url('../images/cardImages/tuiAndLa.png');
}
.water {
  background-image: url('../images/cardImages/waterCard.png');
}
.zuko {
  background-image: url('../images/cardImages/zuko.png');
}
.zukoFlames {
  background-image: url('../images/cardImages/zukoFlames.png');
}

@media screen and (max-width: 768px) {
  .logo {
    height: 70%;
  }
  .elements {
    height: 50%;
  }
  .main {
    flex-direction: column;
  }
  .statsBox {
    height: 15%;
    width: 100%;
    flex-direction: row;
  }
  .stats {
    height: 100%;
    width: calc(100% / 3);
  }
  .gameboard {
    width: 100%;
  }
  .cards {
    height: 90%;
  }
}

@media screen and (max-width: 667px) {
  .logo {
    width: 20%;
  }
  .elements {
    width: 16%;
    height: 100%;
  }
  .stats span {
    font-size: 12px;
  }
  .gameboard {
    padding: 3px;
  }
}

@media screen and (max-width: 375px) {
  .logo {
    height: 40%;
  }
  .elements {
    height: 40%;
  }
}

